<resources>
    <string name="app_name">Weather App</string>
    <string name="mountain">Mountain</string>
    <string name="add_city">Add city</string>
    <string name="city">City</string>
    <string name="t">C°</string>
    <string name="weather_image">Weather Image</string>
    <string name="next_day">Next Day</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="speed">km/h</string>
    <string name="percent">%</string>
    <string name="pressure">mb</string>
    <string name="today">Today</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure_text">Pressure</string>
    <string name="enter_city">Enter City</string>
    <string name="popular_cities">Popular Cities</string>
    <string name="novosibirsk">Novosibirsk</string>
    <string name="moscow">Moscow</string>
    <string name="sochi">Sochi</string>
    <string name="paris">Paris</string>
    <string name="milan">Milan</string>
    <string name="omsk">Omsk</string>
    <string name="krasnoyarsk">Krasnoyarsk</string>
    <string name="novgorod">Novgorod</string>
    <string name="erevan">Erevan</string>
    <string name="dubai">Dubai</string>
    <string name="pekin">Pekin</string>
    <string name="show_wind_speed">Show wind speed</string>
    <string name="show_pressure">Show pressure</string>
    <string name="show_humidity">Show humidity</string>
    <string name="settings">Settings</string>
    <string name="switch_dark_theme">Switch dark theme</string>
    <string name="show_details">Show details</string>
    <string name="show_temperature_by_feel">Show temperature by feel</string>
    <string name="show_number_of_days_ahead">Show number of days ahead</string>
    <string name="three_days_ahead">Three days ahead</string>
    <string name="five_days_ahead">Five days ahead</string>
    <string name="seven_days_ahead">Seven days ahead</string>
    <string name="city_selection">City selection</string>
    <string name="wiki_url">https://en.wikipedia.org/wiki/</string>
    <string name="city_information">City information</string>
    <string name="enter_city_name">Enter the name of the city</string>
    <string name="show_forecast">Show forecast</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="confirmation_cancel">Cancel selected settings?</string>
    <string name="confirmation_save">Save selected settings?</string>
    <string name="forecast">Forecast</string>
    <string name="about_us">About us</string>
    <string name="owm_url">https://api.openweathermap.org/data/2.5/weather?q=</string>
    <string name="measure">&amp;units=metric</string>
    <string name="request_language">&amp;lang=en</string>
    <string name="city_not_found">City not found. Please enter another city</string>
    <string name="no_internet">Internet is not available</string>
    <string name="search">Search</string>
    <string name="select_city">Select City</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="attention">Attention</string>
    <string name="close_message">Are you sure you want to exit the application?</string>
    <string name="exit">Exit</string>
</resources>