<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/MyTheme.SimpleTextSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/FragmentPadding">

        <TextView
            android:id="@+id/cityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
            style="@style/MyTheme.HeadStyle.Bold"/>

        <TextView
            android:id="@+id/dayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/today"
            style="@style/MyTheme.HeadStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dayTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/t"
                style="@style/ForecastStyle"/>

            <ImageView
                android:id="@+id/dayImageView"
                android:layout_width="@dimen/zero_size"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/weather_image" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/windTextView"
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/speed" />

            <ImageView
                android:id="@+id/windImageView"
                android:layout_width="@dimen/zero_size"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/wind"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/wind" />

            <TextView
                android:id="@+id/humidityTextView"
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/percent" />

            <ImageView
                android:id="@+id/humidityImageView"
                android:layout_width="@dimen/zero_size"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/humidity"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/rainy" />

            <TextView
                android:id="@+id/pressureTextView"
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pressure" />

            <ImageView
                android:id="@+id/pressureImageView"
                android:layout_width="@dimen/zero_size"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/pressure_text"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/barometer" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>