<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="?attr/listPreferredItemPaddingStart">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/between_layouts"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="@dimen/thirty_sp"
            android:textStyle="bold" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/darkLightSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/between_layouts"
            android:checked="false"
            android:text="@string/switch_dark_theme"
            android:textSize="@dimen/head2"
            tools:checked="false" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/showDetailsSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/between_layouts"
            android:checked="false"
            android:text="@string/show_details"
            android:textSize="@dimen/head2"
            tools:checked="false" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/showFeelSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/between_layouts"
            android:checked="false"
            android:text="@string/show_temperature_by_feel"
            android:textSize="@dimen/head2"
            tools:checked="false" />

        <TextView
            android:id="@+id/showDaysTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_number_of_days_ahead"
            android:textSize="@dimen/head2" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/threeRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_days_ahead" />

            <RadioButton
                android:id="@+id/fiveRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/five_days_ahead" />

            <RadioButton
                android:id="@+id/sevenRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seven_days_ahead" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>