<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/navigation_forecast">

    <fragment
        android:id="@+id/navigation_forecast"
        android:name="com.katyrin.weatherapp.fragments.MainWeatherFragment"
        android:label="@string/forecast"
        tools:layout="@layout/fragment_weather" >
        <action
            android:id="@+id/action_navigation_forecast_to_navigation_day"
            app:destination="@id/navigation_day" />
    </fragment>

    <fragment
        android:id="@+id/navigation_day"
        android:name="com.katyrin.weatherapp.fragments.DayForecastFragment"
        android:label="@string/next_day"
        tools:layout="@layout/fragment_day_forecast" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.katyrin.weatherapp.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_about_us"
        android:name="com.katyrin.weatherapp.fragments.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about_us" />

</navigation>