<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@navigation/mobile_navigation">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_forecast"
            android:icon="@drawable/ic_baseline_wb_twilight_24"
            android:title="@string/forecast" />

        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_baseline_app_settings_alt_24"
            android:title="@string/settings" />

        <item
            android:id="@+id/navigation_about_us"
            android:icon="@drawable/ic_baseline_people_alt_24"
            android:title="@string/about_us" />
    </group>
</menu>