<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/citySelectionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/MyTheme.SimpleTextSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/FragmentPadding">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterCityInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterCityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_city"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/showForecastButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/show_forecast" />

        <TextView
            android:id="@+id/popularCitiesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popular_cities"
            style="@style/MyTheme.HeadStyle.Bold.Orange"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/citiesRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            tools:targetApi="lollipop" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>